# Compressors

./: .gitignore  CMakeLists.txt  Huffman.cpp  Huffman.h  LZ77.h  LZW.cpp  LZW.h  README.md  ShannonFano.cpp  ShannonFano.h  main.cpp
data/: output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt
data/DATA/: 1.txt  2.docx  3.pptx  6.xlsx
src/compressors/: AlphabetConstructor.h  Huffman.cpp  Huffman.h  LZ77.cpp  LZ77.h  LZW.cpp  ShannonFano.h
src/other/: Compressor.cpp  Compressor.h  Support.cpp  Support.h
